# Empresa

./: .gitignore  .gitmodules  README.md  aaa.py  aplicacao.py  banco.py  cadastro.py  calculadora.py  calculos.py  consulta.py  criar_tipo_list.py  dados.json  del.py  exemplo.py  inserir.py  list.py  lista.py  login.py  rh_Acesso.py  tela_inicial.py  teste,py  teste.py  tk.py
RH/gestao_funcionarios/: rh_create_user.py  rh_user_alter.py
RH/gestao_funcionarios/rh/: rh_consult.py  rh_image.py  rh_panel.py
RH/holerite/: readme.md
RH/holerite - Copia/: .gitignore  rh_user.py
RH/holerite/paycheck/: views.py
RH/holerite/paycheck/static/css/: style_holerite.css  style_home.css  style_menu_lateral.css
RH/holerite/paycheck/templates/pages/: holerite.html  home.html
RH/holerite/paycheck/templates/partials/: exem-holerite.html  head.html  menu-lateral.html  screen-login.html
env/: banco.py  pyvenv.cfg
env/Scripts/: activate  activate.bat
list/: .gitignore  consult.py  delete.py  index.py  insert.py  inserted.py  main.py  main_panel.py
list/commands_list/: consult.py  delete.py  main_panel.py
produtos/: __init__.py  banco.py  comandosql.py  consulta.py  pyproject.toml  qualquer.py
rh/: .gitignore  classe.py  rh_Acesso.py  rh_consult.py  rh_create_user.py  rh_image.py  rh_panel.py  rh_user.py  rh_user_alter.py
