[tool.poetry]
name = "produtos"
version = "0.1.0"
description = ""
authors = ["Kauan Souza <kauansantosdesouza45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyproject = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
